# V-3D

./: .gitignore  CMakeLists.txt  README.md  main.cpp
engine/: Engine.cpp  Engine.h
engine/camera/: Camera.cpp  Camera.h
engine/light/: Light.cpp  Light.h
engine/object/: Object.cpp  Object.h  ObjectFactory.cpp  ObjectFactory.h  ObjectLoader.cpp  ObjectLoader.h
engine/scene/: Scene.cpp  Scene.h
engine/utils/: Color.cpp  Color.h  EulerAngle.cpp  EulerAngle.h  MyPolygon.cpp  MyPolygon.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
report/: main.vsdx  report.docx  Ковалевский_записка_проверенная.docx
